--- a/trunk/umibe/src/ar/com/umibe/gui/MainWindow.form
+++ b/trunk/umibe/src/ar/com/umibe/gui/MainWindow.form
@@ -66,10 +66,8 @@
               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Component id="jButton6" min="-2" max="-2" attributes="0"/>
           </Group>
-          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-              <Component id="encodingStatus" alignment="0" max="32767" attributes="1"/>
-              <Component id="jPanel1" alignment="0" max="32767" attributes="1"/>
-          </Group>
+          <Component id="jPanel1" alignment="0" min="-2" max="-2" attributes="1"/>
+          <Component id="encodingStatus" alignment="0" pref="878" max="32767" attributes="1"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -97,7 +95,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jTabbedPane1" pref="745" max="32767" attributes="0"/>
+              <Component id="jTabbedPane1" alignment="0" pref="878" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -138,7 +136,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-                      <JLayeredPaneConstraints x="190" y="170" width="360" height="40" layer="0" position="-1"/>
+                      <JLayeredPaneConstraints x="280" y="170" width="360" height="40" layer="0" position="-1"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -151,7 +149,7 @@
                   </AuxValues>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-                      <JLayeredPaneConstraints x="0" y="0" width="740" height="410" layer="0" position="-1"/>
+                      <JLayeredPaneConstraints x="0" y="0" width="870" height="410" layer="0" position="-1"/>
                     </Constraint>
                   </Constraints>
 
@@ -198,7 +196,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-                      <JLayeredPaneConstraints x="180" y="170" width="410" height="40" layer="0" position="-1"/>
+                      <JLayeredPaneConstraints x="240" y="170" width="410" height="40" layer="0" position="-1"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -211,7 +209,7 @@
                   </AuxValues>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-                      <JLayeredPaneConstraints x="0" y="0" width="740" height="410" layer="0" position="-1"/>
+                      <JLayeredPaneConstraints x="0" y="0" width="870" height="410" layer="0" position="-1"/>
                     </Constraint>
                   </Constraints>
 
@@ -335,7 +333,7 @@
                                   </Group>
                                   <Component id="remoteJobsDone" min="-2" pref="89" max="-2" attributes="1"/>
                               </Group>
-                              <EmptySpace pref="100" max="32767" attributes="0"/>
+                              <EmptySpace pref="233" max="32767" attributes="0"/>
                               <Component id="jButton8" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="105" max="-2" attributes="0"/>
                           </Group>
@@ -534,7 +532,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jScrollPane1" pref="668" max="32767" attributes="0"/>
+                              <Component id="jScrollPane1" pref="801" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -596,9 +594,9 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace pref="237" max="32767" attributes="0"/>
+                          <EmptySpace pref="353" max="32767" attributes="0"/>
                           <Component id="jLabel8" min="-2" pref="300" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="187" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="204" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -660,7 +658,7 @@
                                   <Component id="jPanel9" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="138" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
